Added MQTT broker; fixed MQTT broker issues with messages > 127 bytes;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,11 @@ add_custom_target(
 )
 
 add_executable(${PROJECT_NAME} ${SRC_LIST} src/io/IOManager.cpp src/io/IOManager.h src/net/HttpServer.cpp src/net/HttpServer.h src/net/NetManager.cpp src/net/NetManager.h src/io/Logger.cpp src/io/Logger.h src/scripting/ProgramEngine.cpp src/scripting/ProgramEngine.h src/io/env/LightSensor.cpp src/io/env/LightSensor.h src/io/env/DS18B10.cpp src/io/env/DS18B10.h src/service/ApiRequest.cpp src/service/ApiRequest.h src/TaskManager.cpp src/TaskManager.h src/Task.cpp src/Task.h src/net/MqttServer.cpp src/net/MqttServer.h)
+
+include_directories(./.piolibdeps/aJson_ID35/src)
+include_directories(./.piolibdeps/ArduinoJson_ID64)
+include_directories(./.piolibdeps/ArduinoLog_ID1532)
+include_directories(./.piolibdeps/ESP8266UPnP_ID2048)
+include_directories(./.piolibdeps/LinkedList_ID443)
+include_directories(./.piolibdeps/WebSockets_ID549/src)
+#include_directories(./.piolibdeps/QList_ID1414/src)
