added Server Sent Event service (EventSource) compatible with HG

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,21 @@
 platform = espressif8266@1.7.3 ;
 board = d1_mini
 framework = arduino
+lib_deps =
+  "ESP Async WebServer"
+  "ArduinoJson"
+  "ArduinoLog"
+  "AsyncTCP"
+  "ESP8266TrueRandom"
+  "ESP8266UPnP"
+  "ESPAsyncTCP"
+  "LinkedList"
+  "MQTTbroker"
+  "OneWire"
+  "QList"
+  "TINYXML"
+  "WebSockets"
+  "aJson"
+  "tinixml2_ID0000"
+;build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
 ;build_flags = -L./lib -llibjerry-core -llibjerry-libm
