added NTP client; added formatted timestamps to events messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,4 @@ include_directories(./.piolibdeps/ESP8266UPnP_ID2048)
 include_directories(./.piolibdeps/LinkedList_ID443)
 include_directories(./.piolibdeps/WebSockets_ID549/src)
 include_directories(./.piolibdeps/OneWire_ID1)
+include_directories(lib/NTPClient-master)
