--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,14 @@
 platform = espressif8266@1.7.3 ;
 board = d1_mini
 framework = arduino
-lib_deps =
-  "ArduinoJson"
-  "ArduinoLog"
-  "ESP8266UPnP"
-  "LinkedList"
-  "MQTTbroker"
-  "OneWire"
-  "TINYXML"
-  "WebSockets"
+;lib_deps =
+;  "ArduinoJson"
+;  "ArduinoLog"
+;  "ESP8266UPnP"
+;  "LinkedList"
+;  "MQTTbroker"
+;  "OneWire"
+;  "TINYXML"
+;  "WebSockets"
 ;build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
 ;build_flags = -L./lib -llibjerry-core -llibjerry-libm
