--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,7 @@ cache:
 install:
     - pip install -U platformio
     - platformio update
+    - platformio lib install
 
 script:
     - platformio run
