adding CI / fix tinyxml2 dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,6 @@ lib_deps =
   OneWire
   TINYXML
   WebSockets
+  tinyxml2=https://github.com/leethomason/tinyxml2/archive/master.zip
 ;build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
 ;build_flags = -L./lib -llibjerry-core -llibjerry-libm
