adding CI / fix QList dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,11 @@ lib_deps =
   ArduinoJson
   ArduinoLog
   ESP8266UPnP
-  LinkedList
-  OneWire
-  TINYXML
   WebSockets
+  OneWire
+  LinkedList
+  QList
+  TINYXML
   tinyxml2=https://github.com/leethomason/tinyxml2/archive/master.zip
 ;build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
 ;build_flags = -L./lib -llibjerry-core -llibjerry-libm
