Added shutter control device firmware example.

--- a/platformio.ini
+++ b/platformio.ini
@@ -96,6 +96,15 @@ board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
 
+[env:shutter]
+platform = espressif32
+build_flags = -I examples -I src
+build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+    madhephaestus/ESP32Servo
+
 
 [env:playground]
 platform = espressif32
@@ -105,5 +114,4 @@ board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
 #    roboticsbrno/ServoESP32@1.1.0
-#    ESP32Servo@1.1.1
-    madhephaestus/ESP32Servo
+#    madhephaestus/ESP32Servo
