- Implemented binary-packed I/O over WebSocket - API command can now be sent also via websocket (either binary-packed or clear text) - WebSocket server default port is now 8188 (same as HG server)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,17 +10,20 @@
 [platformio]
 src_dir = .
 include_dir = ./src
+data_dir = ./data/web
 
 [env]
 build_src_filter = -<*> +<src/*>
 framework = arduino
 board = esp32dev
+board_build.filesystem = littlefs
 lib_deps =
     ArduinoJson@6.21.4
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
     OneWire@2.3.8
     vortigont/LinkedList@1.5.0
+    hideakitai/MsgPack
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.4
     mbed-seeed/BluetoothSerial@0.0.0+sha.f56002898ee8
