--- a/platformio.ini
+++ b/platformio.ini
@@ -26,12 +26,11 @@ lib_deps =
     hideakitai/MsgPack
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.4
-    mbed-seeed/BluetoothSerial@0.0.0+sha.f56002898ee8
-#    h2zero/NimBLE-Arduino
+    lovyan03/LovyanGFX@^1.1.12
 
 
 [env:default]
-platform = espressif32
+platform = espressif32@6.5.0
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 
@@ -41,18 +40,19 @@ platform = espressif8266@2.6.3
 board = d1_mini
 lib_ignore =
     ESP32Time
-    BluetoothSerial
+    ESP32_BleSerial
+    LovyanGFX
 
 [env:d1-mini-esp32]
-platform = espressif32
-build_flags = -DMINI_ESP32 -DCONFIG_ServiceButtonPin=16 -DCONFIG_StatusLedPin=26 -DCONFIG_GPIO_OUT={18,19,23,5} -DCONFIG_GPIO_IN={}
+platform = espressif32@6.5.0
+build_flags = -Os -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 
 
 [env:sonoff]
-platform = espressif32
-build_flags = -DCONFIG_ServiceButtonPin=0 -DCONFIG_StatusLedPin=13 -DCONFIG_GPIO_OUT={14,27} -DCONFIG_GPIO_IN={32,33}
+platform = espressif32@6.5.0
+build_flags = -Os -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 
@@ -61,15 +61,15 @@ board_build.partitions = min_spiffs.csv
 
 
 [env:smart-sensor]
-platform = espressif32
-build_flags = -I examples -I src
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 
 [env:smart-sensor-d1-mini-esp32]
-platform = espressif32
-build_flags = -I examples -I src -DMINI_ESP32 -DCONFIG_ServiceButtonPin=16 -DCONFIG_StatusLedPin=26 -DCONFIG_GPIO_OUT={18,19,23,5} -DCONFIG_GPIO_IN={}
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
@@ -77,22 +77,50 @@ board_build.partitions = min_spiffs.csv
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = -I examples -I src
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_ignore =
     ESP32Time
-    BluetoothSerial
+    ESP32_BleSerial
+    LovyanGFX
+
+[env:smart-sensor-display]
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
+board_build.flash_size = 4MB
+board_build.partitions = no_ota.csv
+lib_deps = ${env.lib_deps}
+    Wire
+    RobTillaart/DHTNew@0.4.19
+
+[env:smart-sensor-display-s3]
+platform = espressif32@6.5.0
+board = esp32-s3-devkitc-1
+build_flags = -Os -I examples -I src -D ESP32_S3 -DESP32S3_DEV -DBOARD_HAS_PSRAM
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+board_build.arduino.memory_type = qio_qspi
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+#board_build.flash_size = 4MB
+board_build.partitions = default_16MB.csv
+board_upload.flash_size = 16MB
+lib_deps = ${env.lib_deps}
+   Wire
+   RobTillaart/DHTNew@0.4.19
 
 [env:x10-transceiver]
-platform = espressif32
-build_flags = -I examples -I src
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 
 [env:rf-transceiver]
-platform = espressif32
-build_flags = -I examples -I src
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
@@ -100,21 +128,32 @@ lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
 
 [env:shutter]
-platform = espressif32
-build_flags = -I examples -I src
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
-    madhephaestus/ESP32Servo
+    arduino-libraries/Stepper@^1.1.3
+    madhephaestus/ESP32Servo@^1.1.1
 
 
 [env:playground]
-platform = espressif32
-build_flags = -I examples -I src
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
-lib_deps = ${env.lib_deps}
-#    roboticsbrno/ServoESP32@1.1.0
-#    madhephaestus/ESP32Servo
+
+[env:playground-c3]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
