--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,6 @@ lib_deps =
     ArduinoJson@6.21.4
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
-    OneWire@2.3.8
     vortigont/LinkedList@1.5.0
     hideakitai/MsgPack
     adafruit/TINYXML@1.0.3
@@ -66,6 +65,8 @@ build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+    OneWire@2.3.8
 
 [env:smart-sensor-d1-mini-esp32]
 platform = espressif32@6.5.0
@@ -73,12 +74,16 @@ build_flags = -Os -I examples -I src -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+    OneWire@2.3.8
 
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+    OneWire@2.3.8
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -86,18 +91,17 @@ lib_ignore =
 
 [env:smart-sensor-display]
 platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+build_flags = -Os -I examples -I src -D CONFIG_ENABLE_POWER_MANAGER
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.flash_size = 4MB
 board_build.partitions = no_ota.csv
 lib_deps = ${env.lib_deps}
-    Wire
     RobTillaart/DHTNew@0.4.19
 
 [env:smart-sensor-display-s3]
 platform = espressif32@6.5.0
 board = esp32-s3-devkitc-1
-build_flags = -Os -I examples -I src -D ESP32_S3 -DESP32S3_DEV -DBOARD_HAS_PSRAM
+build_flags = -Os -I examples -I src -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -108,8 +112,7 @@ board_build.flash_mode = qio
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 lib_deps = ${env.lib_deps}
-   Wire
-   RobTillaart/DHTNew@0.4.19
+    RobTillaart/DHTNew@0.4.19
 
 [env:x10-transceiver]
 platform = espressif32@6.5.0
