--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,11 @@ framework = arduino
 board = esp32dev
 board_build.filesystem = littlefs
 lib_deps =
-    ArduinoJson@6.21.4
+    ArduinoJson@7.0.3
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
     vortigont/LinkedList@1.5.0
-    hideakitai/MsgPack
+    hideakitai/MsgPack@0.4.2
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.4
     lovyan03/LovyanGFX@^1.1.12
@@ -129,6 +129,58 @@ board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
+
+
+[env:ir-transceiver]
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
+build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           crankyoldgit/IRremoteESP8266@2.8.6
+
+[env:ir-transceiver-c3]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           crankyoldgit/IRremoteESP8266@2.8.6
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
+
+[env:color-light]
+platform = espressif32@6.5.0
+build_flags = -Os -I examples -I src
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
+[env:color-light-c3]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D CONFIG_StatusLedNeoPixelPin=10 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
 
 [env:shutter]
 platform = espressif32@6.5.0
