--- a/platformio.ini
+++ b/platformio.ini
@@ -159,7 +159,7 @@ lib_deps = ${env.lib_deps}
 
 [env:color-light]
 platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+build_flags = -Os -I examples -I src -D CONFIG_StatusLedNeoPixelPin=10
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
