--- a/platformio.ini
+++ b/platformio.ini
@@ -159,7 +159,7 @@ lib_deps = ${env.lib_deps}
 
 [env:color-light]
 platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src -D CONFIG_StatusLedNeoPixelPin=10
+build_flags = -Os -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
@@ -174,7 +174,7 @@ board = esp32-c3-devkitc-02
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D CONFIG_StatusLedNeoPixelPin=10 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 board_build.flash_size = 4MB
 board_build.partitions = min_spiffs.csv
@@ -191,6 +191,23 @@ board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     arduino-libraries/Stepper@^1.1.3
     madhephaestus/ESP32Servo@^1.1.1
+
+[env:shutter-c3]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+    arduino-libraries/Stepper@^1.1.3
+    madhephaestus/ESP32Servo@^1.1.1
+    https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 
 [env:playground]
