--- a/platformio.ini
+++ b/platformio.ini
@@ -181,6 +181,51 @@ board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
+[env:color-light-c3-25]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
+[env:color-light-c3-64]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
+[env:color-light-c3-90]
+platform = espressif32@6.5.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+; change microcontroller
+#board_build.mcu = esp32c3
+; change MCU frequency
+#board_build.f_cpu = 160000000L
+build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
+board_build.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
+lib_deps = ${env.lib_deps}
+           https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+
 
 [env:shutter]
 platform = espressif32@6.5.0
