--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,15 @@ data_dir = ./data/web
 
 [env]
 build_src_filter = -<*> +<src/*>
+build_flags = -D CRON_USE_LOCAL_TIME -DCRON_DISABLE_YEARS -Os
+build_unflags = -fno-exceptions
 framework = arduino
 board = esp32dev
 board_build.filesystem = littlefs
+board_build.flash_size = 4MB
+board_build.partitions = ./src/partitions_ota.csv
 lib_deps =
-    ArduinoJson@7.0.3
+    ArduinoJson@7.0.4
     thijse/ArduinoLog@1.1.1
     WebSockets@2.4.1
     vortigont/LinkedList@1.5.0
@@ -29,58 +33,49 @@ lib_deps =
 
 
 [env:default]
-platform = espressif32@6.5.0
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
+platform = espressif32@6.6.0
 
 
 [env:d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
+build_flags = ${env.build_flags}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
     LovyanGFX
 
 [env:d1-mini-esp32]
-platform = espressif32@6.5.0
-build_flags = -Os -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 
 
 [env:sonoff]
-platform = espressif32@6.5.0
-build_flags = -Os -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
 
 
 #------------------[ Examples ]------------------
 
 
 [env:smart-sensor]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
 
 [env:smart-sensor-d1-mini-esp32]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
 
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = -Os -I examples -I src
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
@@ -90,165 +85,145 @@ lib_ignore =
     LovyanGFX
 
 [env:smart-sensor-display]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src -D CONFIG_ENABLE_POWER_MANAGER
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D CONFIG_ENABLE_POWER_MANAGER -D DISABLE_AUTOMATION
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
-board_build.flash_size = 4MB
-board_build.partitions = no_ota.csv
+board_build.partitions = ./src/partitions.csv
 lib_deps = ${env.lib_deps}
     RobTillaart/DHTNew@0.4.19
 
 [env:smart-sensor-display-s3]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
-build_flags = -Os -I examples -I src -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 board_build.arduino.memory_type = qio_qspi
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
-#board_build.flash_size = 4MB
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
 lib_deps = ${env.lib_deps}
     RobTillaart/DHTNew@0.4.19
 
 [env:x10-transceiver]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 
 [env:rf-transceiver]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
 
 
 [env:ir-transceiver]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            crankyoldgit/IRremoteESP8266@2.8.6
+lib_ignore =
+    LovyanGFX
 
 [env:ir-transceiver-c3]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            crankyoldgit/IRremoteESP8266@2.8.6
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
+lib_ignore =
+    LovyanGFX
 
 
 [env:color-light]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 [env:color-light-c3]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<lib/jerryscript/amalgam/*> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 [env:color-light-c3-25]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 [env:color-light-c3-64]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 [env:color-light-c3-90]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel@1.12.0
 
 
 [env:shutter]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     arduino-libraries/Stepper@^1.1.3
     madhephaestus/ESP32Servo@^1.1.1
 
 [env:shutter-c3]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 lib_deps = ${env.lib_deps}
     arduino-libraries/Stepper@^1.1.3
     madhephaestus/ESP32Servo@^1.1.1
@@ -256,21 +231,17 @@ lib_deps = ${env.lib_deps}
 
 
 [env:playground]
-platform = espressif32@6.5.0
-build_flags = -Os -I examples -I src
+platform = espressif32@6.6.0
+build_flags = ${env.build_flags} -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
 
 [env:playground-c3]
-platform = espressif32@6.5.0
+platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 ; change microcontroller
 #board_build.mcu = esp32c3
 ; change MCU frequency
 #board_build.f_cpu = 160000000L
-build_flags = -Os -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
-board_build.flash_size = 4MB
-board_build.partitions = min_spiffs.csv
