--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ framework = arduino
 board = esp32dev
 board_build.filesystem = littlefs
 board_build.flash_size = 4MB
-board_build.partitions = ./src/partitions_ota.csv
+board_build.partitions = ./src/partitions.csv
 lib_deps =
     ArduinoJson@7.0.4
     thijse/ArduinoLog@1.1.1
@@ -29,7 +29,8 @@ lib_deps =
     hideakitai/MsgPack@0.4.2
     adafruit/TINYXML@1.0.3
     ESP32Time@2.0.4
-    lovyan03/LovyanGFX@^1.1.12
+    lovyan03/LovyanGFX@1.1.12
+    dvarrel/ESPping@1.0.4
 
 
 [env:default]
@@ -53,7 +54,7 @@ build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D 
 [env:sonoff]
 platform = espressif32@6.6.0
 build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
-
+board_build.partitions = no_ota.csv
 
 #------------------[ Examples ]------------------
 
@@ -133,10 +134,6 @@ lib_ignore =
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps}
@@ -157,10 +154,6 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<lib/jerryscript/amalgam/*> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -170,10 +163,6 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -183,10 +172,6 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -196,10 +181,6 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
@@ -218,10 +199,6 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
 lib_deps = ${env.lib_deps}
@@ -239,9 +216,5 @@ build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
 platform = espressif32@6.6.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-; change microcontroller
-#board_build.mcu = esp32c3
-; change MCU frequency
-#board_build.f_cpu = 160000000L
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
