--- a/platformio.ini
+++ b/platformio.ini
@@ -40,7 +40,7 @@ platform = espressif32@6.6.0
 [env:d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = ${env.build_flags}
+build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -76,7 +76,7 @@ lib_deps = ${env.lib_deps}
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
