--- a/platformio.ini
+++ b/platformio.ini
@@ -28,9 +28,10 @@ lib_deps =
     vortigont/LinkedList@1.5.0
     hideakitai/MsgPack@0.4.2
     adafruit/TINYXML@1.0.3
-    ESP32Time@2.0.4
+    ESP32Time@2.0.6
     lovyan03/LovyanGFX@1.1.12
     dvarrel/ESPping@1.0.4
+    jpb10/SolarCalculator@2.0.1
 
 
 [env:default]
