--- a/platformio.ini
+++ b/platformio.ini
@@ -54,8 +54,7 @@ build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D 
 
 [env:sonoff]
 platform = espressif32@6.6.0
-build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
-board_build.partitions = no_ota.csv
+build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
 
 #------------------[ Examples ]------------------
 
@@ -97,7 +96,7 @@ lib_deps = ${env.lib_deps}
 [env:smart-sensor-display-s3]
 platform = espressif32@6.6.0
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
