--- a/platformio.ini
+++ b/platformio.ini
@@ -35,7 +35,7 @@ lib_deps =
 
 
 [env:default]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 
 
 [env:d1-mini]
@@ -48,26 +48,26 @@ lib_ignore =
     LovyanGFX
 
 [env:d1-mini-esp32]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 
 
 [env:sonoff]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
 
 #------------------[ Examples ]------------------
 
 
 [env:smart-sensor]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
 
 [env:smart-sensor-d1-mini-esp32]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
@@ -86,7 +86,7 @@ lib_ignore =
     LovyanGFX
 
 [env:smart-sensor-display]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D CONFIG_ENABLE_POWER_MANAGER -D DISABLE_AUTOMATION
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.partitions = ./src/partitions.csv
@@ -94,7 +94,7 @@ lib_deps = ${env.lib_deps}
     RobTillaart/DHTNew@0.4.19
 
 [env:smart-sensor-display-s3]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-s3-devkitc-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
@@ -109,20 +109,62 @@ lib_deps = ${env.lib_deps}
     RobTillaart/DHTNew@0.4.19
 
 [env:x10-transceiver]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 
+[env:x10-transceiver-c3]
+platform = espressif32@6.7.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
+lib_ignore =
+    LovyanGFX
+
+[env:x10-transceiver-d1-mini]
+platform = espressif8266@2.6.3
+board = d1_mini
+build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
+lib_ignore =
+    ESP32Time
+    ESP32_BleSerial
+    LovyanGFX
+
 [env:rf-transceiver]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
 
+[env:rf-transceiver-d1-mini]
+platform = espressif8266@2.6.3
+board = d1_mini
+build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
+lib_deps = ${env.lib_deps}
+    rc-switch@2.6.4
+lib_ignore =
+    ESP32Time
+    ESP32_BleSerial
+    LovyanGFX
+
+[env:rf-transceiver-c3]
+platform = espressif32@6.7.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
+lib_deps = ${env.lib_deps}
+    rc-switch@2.6.4
+lib_ignore =
+    LovyanGFX
+
 
 [env:ir-transceiver]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps}
@@ -131,7 +173,7 @@ lib_ignore =
     LovyanGFX
 
 [env:ir-transceiver-c3]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -144,14 +186,14 @@ lib_ignore =
 
 
 [env:color-light]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:color-light-c3]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -160,7 +202,7 @@ lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:color-light-c3-25]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -169,7 +211,7 @@ lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:color-light-c3-64]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -178,7 +220,7 @@ lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
 [env:color-light-c3-90]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -188,7 +230,7 @@ lib_deps = ${env.lib_deps}
 
 
 [env:shutter]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
 lib_deps = ${env.lib_deps}
@@ -196,7 +238,7 @@ lib_deps = ${env.lib_deps}
     madhephaestus/ESP32Servo@^1.1.1
 
 [env:shutter-c3]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
@@ -208,12 +250,12 @@ lib_deps = ${env.lib_deps}
 
 
 [env:playground]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src
 build_src_filter = +<src> -<src/main.cpp> +<examples/playground>
 
 [env:playground-c3]
-platform = espressif32@6.6.0
+platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
