--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ lib_deps =
 
 [env:default]
 platform = espressif32@6.7.0
+build_flags = ${env.build_flags}
 
 
 [env:d1-mini]
@@ -49,7 +50,12 @@ lib_ignore =
 
 [env:d1-mini-esp32]
 platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
+build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5}
+
+
+[env:switch-relay-x2-esp32]
+platform = espressif32@6.7.0
+build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=23 -D CONFIG_GPIO_OUT="{16,17}"
 
 
 [env:sonoff]
@@ -68,7 +74,7 @@ lib_deps = ${env.lib_deps}
 
 [env:smart-sensor-d1-mini-esp32]
 platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5} -D CONFIG_GPIO_IN={}
+build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5}
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
@@ -125,7 +131,7 @@ lib_ignore =
 [env:x10-transceiver-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
 lib_ignore =
     ESP32Time
@@ -142,7 +148,7 @@ lib_deps = ${env.lib_deps}
 [env:rf-transceiver-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
-build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
 lib_deps = ${env.lib_deps}
     rc-switch@2.6.4
