--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -14,7 +14,23 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
+      - name: Set env
+        run: |
+          echo "export RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "export VERSION_NUMBER=$(echo ${GITHUB_REF#refs/*/} | cut -d"v" -f 2)" >> $GITHUB_ENV
+
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
+
       - name: Build PlatformIO Project
-        run: pio run
+        run: |
+          pio run
+          sh ./github/post-build.sh
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            ./artifacts/*.zip
