--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -4,7 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - name: Set env
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "VERSION_NUMBER=$(echo ${GITHUB_REF#refs/*/} | cut -d"v" -f 2)" >> $GITHUB_ENV
+          echo VERSION_NUMBER=$VERSION_NUMBER
+
       - uses: actions/cache@v3
         with:
           path: |
@@ -15,17 +21,13 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Set env
-        run: |
-          echo "export RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "export VERSION_NUMBER=$(echo ${GITHUB_REF#refs/*/} | cut -d"v" -f 2)" >> $GITHUB_ENV
-
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
 
       - name: Build PlatformIO Project
         run: |
           pio run
+          echo VERSION_NUMBER=$VERSION_NUMBER
           bash ./.github/post-build.sh
 
       - name: Release
