--- a/platformio.ini
+++ b/platformio.ini
@@ -14,13 +14,16 @@ data_dir = ./data/web
 
 [env]
 build_src_filter = -<*> +<src/*>
-build_flags = -D CRON_USE_LOCAL_TIME -DCRON_DISABLE_YEARS -Os
+build_flags = -D CRON_USE_LOCAL_TIME -D CRON_DISABLE_YEARS -Os -D BUILD_ENV_NAME=\"$PIOENV\"
 build_unflags = -fno-exceptions
 framework = arduino
 board = esp32dev
 board_build.filesystem = littlefs
 board_build.flash_size = 4MB
 board_build.partitions = ./src/partitions.csv
+monitor_filters = send_on_enter
+monitor_eol = LF
+monitor_echo = true
 lib_deps =
     ArduinoJson@7.0.4
     thijse/ArduinoLog@1.1.1
@@ -32,6 +35,8 @@ lib_deps =
     lovyan03/LovyanGFX@1.1.12
     dvarrel/ESPping@1.0.4
     jpb10/SolarCalculator@2.0.1
+lib_deps_8266 =
+    vshymanskyy/Preferences@2.1.0
 
 
 [env:default]
@@ -43,6 +48,8 @@ build_flags = ${env.build_flags}
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -84,7 +91,8 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps}
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
     OneWire@2.3.8
 lib_ignore =
     ESP32Time
@@ -133,6 +141,8 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/x10-transceiver>
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -150,7 +160,8 @@ platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/rf-transceiver>
-lib_deps = ${env.lib_deps}
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
     rc-switch@2.6.4
 lib_ignore =
     ESP32Time
@@ -176,6 +187,19 @@ build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
 lib_deps = ${env.lib_deps}
            crankyoldgit/IRremoteESP8266@2.8.6
 lib_ignore =
+    LovyanGFX
+
+[env:ir-transceiver-d1-mini]
+platform = espressif8266@2.6.3
+board = d1_mini
+build_flags = ${env.build_flags} -D DISABLE_UI
+build_src_filter = +<src> -<src/main.cpp> +<examples/ir-transceiver>
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
+    crankyoldgit/IRremoteESP8266@2.8.6
+lib_ignore =
+    ESP32Time
+    ESP32_BleSerial
     LovyanGFX
 
 [env:ir-transceiver-c3]
@@ -204,33 +228,6 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<lib/jerryscript/amalgam/*> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
-
-[env:color-light-c3-25]
-platform = espressif32@6.7.0
-board = esp32-c3-devkitc-02
-#board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=25 -D LED_ARRAY_PIN=8 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
-
-[env:color-light-c3-64]
-platform = espressif32@6.7.0
-board = esp32-c3-devkitc-02
-#board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=64 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
-lib_deps = ${env.lib_deps}
-           https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
-
-[env:color-light-c3-90]
-platform = espressif32@6.7.0
-board = esp32-c3-devkitc-02
-#board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D LED_ARRAY_COUNT=90 -D LED_ARRAY_PIN=5 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
