--- a/platformio.ini
+++ b/platformio.ini
@@ -43,8 +43,13 @@ lib_deps_8266 =
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags}
 
+[env:default-c3]
+platform = espressif32@6.7.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 
-[env:d1-mini]
+[env:default-d1mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
@@ -55,19 +60,11 @@ lib_ignore =
     ESP32_BleSerial
     LovyanGFX
 
-[env:d1-mini-esp32]
+[env:sonoff-dualr3]
 platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -D MINI_ESP32 -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5}
+build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK
+              -D DEFAULT_CONFIG='{"sys_bt_pin":"0","sys_sl_pin":"13","io-typ01":"Switch","io-pin01":"14","io-typ02":"Switch","io-pin02":"27"}'
 
-
-[env:switch-relay-x2-esp32]
-platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=23 -D CONFIG_GPIO_OUT="{16,17}"
-
-
-[env:sonoff]
-platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ServiceButtonPin=0 -D CONFIG_StatusLedPin=13 -D CONFIG_GPIO_OUT={14,27} -D CONFIG_GPIO_IN={32,33}
 
 #------------------[ Examples ]------------------
 
@@ -81,7 +78,8 @@ lib_deps = ${env.lib_deps}
 
 [env:smart-sensor-d1-mini-esp32]
 platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI -D CONFIG_ServiceButtonPin=16 -D CONFIG_StatusLedPin=26 -D CONFIG_GPIO_OUT={18,19,23,5}
+build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI
+             -D DEFAULT_CONFIG='{"sys_bt_pin":"16","sys_sl_pin":"26","io-typ01":"Dimmer","io-pin01":"18","io-typ02":"Dimmer","io-pin02":"19","io-typ03":"Dimmer","io-pin03":"23","io-typ04":"Dimmer","io-pin04":"5"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
     OneWire@2.3.8
@@ -110,7 +108,8 @@ lib_deps = ${env.lib_deps}
 [env:smart-sensor-display-s3]
 platform = espressif32@6.7.0
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM -D CONFIG_GPIO_OUT={15,17,18}
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"sys_bt_pin":"0","sys_sl_pin":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","io-typ03":"Dimmer","io-pin03":"18"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
@@ -226,7 +225,7 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<lib/jerryscript/amalgam/*> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -244,7 +243,7 @@ lib_deps = ${env.lib_deps}
 platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D CONFIG_StatusLedPin=-1 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 build_src_filter = +<src> -<src/main.cpp> +<examples/shutter>
 lib_deps = ${env.lib_deps}
     arduino-libraries/Stepper@^1.1.3
