--- a/platformio.ini
+++ b/platformio.ini
@@ -49,7 +49,7 @@ board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
 
-[env:default-d1mini]
+[env:default-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -D DISABLE_UI -D DISABLE_AUTOMATION
@@ -72,26 +72,42 @@ build_flags = ${env.build_flags} -D DISABLE_UI -D CONFIG_AUTOMATION_SPAWN_FREERT
 [env:smart-sensor]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
+              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps}
+    RobTillaart/DHTNew@0.4.19
     OneWire@2.3.8
+lib_ignore =
+    LovyanGFX
+
+[env:smart-sensor-c3]
+platform = espressif32@6.7.0
+board = esp32-c3-devkitc-02
+#board = esp32-c3-devkitm-1
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
+              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"4","io-typ02":"Dimmer","io-pin02":"5","sdht-typ":"22","sdht-pin":"7","motn-typ":"switch","motn-pin":"6"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
+lib_deps = ${env.lib_deps}
+           RobTillaart/DHTNew@0.4.19
+           OneWire@2.3.8
+lib_ignore =
+    LovyanGFX
 
 [env:smart-sensor-d1-mini-esp32]
 platform = espressif32@6.7.0
 build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI
-             -D DEFAULT_CONFIG='{"sys_bt_pin":"16","sys_sl_pin":"26","io-typ01":"Dimmer","io-pin01":"18","io-typ02":"Dimmer","io-pin02":"19","io-typ03":"Dimmer","io-pin03":"23","io-typ04":"Dimmer","io-pin04":"5"}'
+             -D DEFAULT_CONFIG='{"sys_bt_pin":"16","sys_sl_pin":"26","soth-typ":"ds18b20","soth-pin":"17","ligh-typ":"ldr","ligh-pin":"36"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env.lib_deps}
-    OneWire@2.3.8
+lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
+              -D DEFAULT_CONFIG='{"sys_bt_pin":"2","sys_sl_pin":"16","soth-typ":"ds18b20","soth-pin":"0","ligh-typ":"ldr","ligh-pin":"17"}'
 build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
 lib_deps = ${env.lib_deps_8266}
-    ${env.lib_deps}
-    OneWire@2.3.8
+    ${env:smart-sensor.lib_deps}
 lib_ignore =
     ESP32Time
     ESP32_BleSerial
@@ -99,18 +115,18 @@ lib_ignore =
 
 [env:smart-sensor-display]
 platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -I examples -I src -D CONFIG_ENABLE_POWER_MANAGER -D DISABLE_AUTOMATION
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_AUTOMATION
+              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.partitions = ./src/partitions.csv
-lib_deps = ${env.lib_deps}
-    RobTillaart/DHTNew@0.4.19
+lib_deps = ${env:smart-sensor.lib_deps}
 
 [env:smart-sensor-display-s3]
 platform = espressif32@6.7.0
 board = esp32-s3-devkitc-1
-build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -D CONFIG_ENABLE_POWER_MANAGER -DESP32S3_DEV -DBOARD_HAS_PSRAM
-              -D DEFAULT_CONFIG='{"sys_bt_pin":"0","sys_sl_pin":"-1","io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","io-typ03":"Dimmer","io-pin03":"18"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor-display>
+build_flags = ${env.build_flags} -I examples -I src -D ESP32_S3 -D CONFIG_AUTOMATION_SPAWN_FREERTOS_TASK -DESP32S3_DEV -DBOARD_HAS_PSRAM
+              -D DEFAULT_CONFIG='{"io-typ01":"Dimmer","io-pin01":"15","io-typ02":"Dimmer","io-pin02":"17","sdht-typ":"22","sdht-pin":"21","motn-typ":"switch","motn-pin":"16"}'
+build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor> -<examples/smart-sensor/smart-sensor.cpp> +<examples/smart-sensor-display>
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 board_build.arduino.memory_type = qio_qspi
@@ -118,8 +134,8 @@ board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
-lib_deps = ${env.lib_deps}
-    RobTillaart/DHTNew@0.4.19
+lib_deps = ${env:smart-sensor.lib_deps}
+
 
 [env:x10-transceiver]
 platform = espressif32@6.7.0
