--- a/platformio.ini
+++ b/platformio.ini
@@ -93,13 +93,6 @@ lib_deps = ${env.lib_deps}
 lib_ignore =
     LovyanGFX
 
-[env:smart-sensor-d1-mini-esp32]
-platform = espressif32@6.7.0
-build_flags = ${env.build_flags} -I examples -I src -D MINI_ESP32 -D DISABLE_UI
-             -D DEFAULT_CONFIG='{"sys_bt_pin":"16","sys_sl_pin":"26","soth-typ":"ds18b20","soth-pin":"17","ligh-typ":"ldr","ligh-pin":"36"}'
-build_src_filter = +<src> -<src/main.cpp> +<examples/smart-sensor>
-lib_deps = ${env:smart-sensor.lib_deps}
-
 [env:smart-sensor-d1-mini]
 platform = espressif8266@2.6.3
 board = d1_mini
@@ -236,6 +229,18 @@ build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI
 build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+
+[env:color-light-d1-mini]
+platform = espressif8266@2.6.3
+board = d1_mini
+build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
+lib_deps = ${env.lib_deps_8266}
+    ${env.lib_deps}
+    https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
+lib_ignore =
+    ESP32Time
+    ESP32_BleSerial
+    LovyanGFX
 
 [env:color-light-c3]
 platform = espressif32@6.7.0
