- fixed build configuration of ESP8266 `color-light` firmware

--- a/platformio.ini
+++ b/platformio.ini
@@ -234,6 +234,7 @@ lib_deps = ${env.lib_deps}
 platform = espressif8266@2.6.3
 board = d1_mini
 build_flags = ${env.build_flags} -I examples -I src -D DISABLE_UI -D DISABLE_AUTOMATION
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps_8266}
     ${env.lib_deps}
     https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
@@ -247,7 +248,7 @@ platform = espressif32@6.7.0
 board = esp32-c3-devkitc-02
 #board = esp32-c3-devkitm-1
 build_flags = ${env.build_flags} -I examples -I src -D ESP32_C3 -D DISABLE_UI -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1
-build_src_filter = +<src> -<src/main.cpp> +<lib/jerryscript/amalgam/*> +<examples/color-light>
+build_src_filter = +<src> -<src/main.cpp> +<examples/color-light>
 lib_deps = ${env.lib_deps}
            https://github.com/adafruit/Adafruit_NeoPixel#1.12.0
 
